# ConeDetection

./: README.md
dip_ws_new/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
dip_ws_new/devel/lib/exp1/: exp1
dip_ws_new/devel/lib/pkgconfig/: exp1.pc
dip_ws_new/devel/share/exp1/cmake/: exp1Config.cmake
dip_ws_new/src/exp1/: CMakeLists.txt
dip_ws_new/src/exp1/src/: cone_detect_realsense.py  exp1.cpp
